# voiceagent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  config.yaml  funasr_download.py  langchain_test.py  requirements.txt  voice_agent.py
agent_session/: __init__.py  agent_session.py  session_mgr.py
config/: config.py
llm_client/: langchain_client.py  llm_client.py
logger/: __init__.py
src/: transcode.cpp  transcode.yaml
src/config/: config.cpp  config.hpp
src/net/http/: http_client.cpp  http_client.hpp  http_common.hpp  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp
src/net/http/websocket/: websocket_client.cpp  websocket_client.hpp  websocket_frame.cpp  websocket_pub.cpp  websocket_pub.hpp  websocket_server.cpp  websocket_server.hpp  websocket_session.cpp  websocket_session.hpp  ws_session_base.cpp  ws_session_base.hpp
src/net/rtprtcp/: rtcp_fb_pub.hpp  rtcp_pspli.hpp  rtcp_rr.hpp  rtcp_sr.hpp  rtcp_tcc_fb.hpp  rtcp_xr_dlrr.hpp  rtcp_xr_rrt.hpp  rtcpfb_nack.hpp  rtp_packet.cpp  rtp_packet.hpp  rtprtcp_pub.hpp
src/net/stun/: stun.cpp  stun.hpp
src/net/tcp/: ssl_client.hpp  ssl_pub.hpp  ssl_server.hpp  tcp_client.hpp  tcp_pub.hpp  tcp_server.hpp  tcp_session.hpp
src/net/udp/: udp_client.hpp  udp_pub.hpp  udp_server.hpp
src/room/: AIUser.cpp  AIUser.hpp  room.cpp  room.hpp  room_mgr.cpp  room_mgr.hpp  room_pub.hpp
src/transcode/: ffmpeg_include.h  pcm2opus.cpp  pcm2opus.hpp
src/transcode/decoder/: decoder.cpp  decoder.h
src/transcode/encoder/: encoder.cpp  encoder.h
src/transcode/filter/: audio_filter.cpp  audio_filter.h  filter_base.cpp  filter_base.h  media_filter.cpp  media_filter.h  video_filter.cpp  video_filter.h
src/tts/: tts.cpp  tts.hpp
src/utils/: byte_crypto.cpp  byte_crypto.hpp  byte_stream.hpp  co_pub.hpp  crc.cpp  crc.hpp  data_buffer.hpp  event_log.cpp  event_log.hpp  io_interface.hpp  ipaddress.hpp  logger.hpp  stringex.cpp  stringex.hpp  timeex.cpp  timeex.hpp  timer.cpp  timer.hpp  url.cpp  url.h
src/utils/av/: av.hpp  gop_cache.cpp  gop_cache.hpp  media_packet.hpp  media_stream_manager.cpp  media_stream_manager.hpp
src/ws_message/: ws_protoo_client.cpp  ws_protoo_client.hpp  ws_protoo_info.hpp
utils/: model_manager.py
websocket_protoo/: ws_protoo_server.py  ws_protoo_session.py
worker_mgr/: worker_mgr.py
